// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Readback /> it matches the snapshot 1`] = `
<div
  className="Readback Readback"
  style={
    Object {
      "backgroundColor": "#383838",
      "color": "#00bb00",
    }
  }
>
  3.14
</div>
`;

exports[`<Readback /> snapshot matches 1`] = `
<div
  className="Readback Readback"
  style={
    Object {
      "backgroundColor": "#383838",
      "color": "#00bb00",
    }
  }
>
  hello
</div>
`;

exports[`snapshot matches 1`] = `
<div
  className="Readback"
  style={
    Object {
      "backgroundColor": "#383838",
      "color": "#00bb00",
    }
  }
>
  hello
</div>
`;
